media-server/prowlarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prowlarr
  namespace: media-server
spec:
  selector:
    matchLabels:
      app: prowlarr
  strategy:
    type: Recreate # This makes sure only one instance is running at a time
  template:
    metadata:
      labels:
        app: prowlarr
    spec:
      containers:
        - name: prowlarr
          image: lscr.io/linuxserver/prowlarr:1.24.3
          ports:
            - containerPort: 8080
              name: http
          volumeMounts:
            - name: config-pv
              mountPath: /config
      securityContext:
        fsGroup: 100
        fsGroupChangePolicy: "OnRootMismatch"
        seccompProfile:
          type: RuntimeDefault
      volumes:
        - name: config-pv
          persistentVolumeClaim:
            claimName: prowlarr-config
        - name: configmap-volume
          configMap:
            name: prowlarr-config
